Change charset to UTF-8

--- a/src/resource.rc
+++ b/src/resource.rc
@@ -13,7 +13,7 @@ BEGIN
     BLOCK "080404E4"
     BEGIN
       VALUE "CompanyName", "Motoori Kashin"
-      VALUE "FileDescription", "IDM EF2¸¨Öú¹¤¾ß"
+      VALUE "FileDescription", "IDM EF2è¾…åŠ©å·¥å…·"
       VALUE "FileVersion", "1.0.2"
       VALUE "InternalName", "ef2.exe"
       VALUE "LegalCopyright", "Licensed under the MIT License."
